[package]
name = "tetrs"
version = "0.1.0"
edition = "2024"
description = "A Rusty Tetris CLI - proving Rust superiority one block at a time"
authors = ["Your Name"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
rodio = "0.20"
