[package]
name = "tetrs"
version = "0.1.0"
edition = "2024"
description = "A Rusty Tetris CLI - proving Rust superiority one block at a time"
authors = ["Your Name"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
arboard = "3.4"
toml = "0.8"
directories = "5.0"
rodio = "0.20"
iroh = "0.32"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
