[package]
name = "tetrs"
version = "1.0.0-alpha"
edition = "2024"
description = "A Rusty Tetris CLI - proving Rust superiority one block at a time"
authors = ["Claude from Anthropics", "werdxz"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.10"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wl-clipboard-rs = "0.9"
toml = "0.8"
directories = "5.0"
rodio = "0.20"
iroh = "0.32"
iroh-base = { version = "0.32", features = ["ticket"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
